@@ -463,7 +463,14 @@ which allows only the following characters to be backslash-escaped:
     \`*_{}[]()>#+-.!
 
 A backslash-escaped space is parsed as a nonbreaking space.  It will
-appear in TeX output as '~' and in HTML and XML as '\&#160;' or '\&nbsp;'.
+appear in TeX output as '`~`' and in HTML and XML as '`\&#160;`' or
+'`\&nbsp;`'.
+
+A backslash-escaped newline (i.e. a backslash occurring at the end of
+a line) is parsed as a hard line break.  It will appear in TeX output as
+'`\\`' and in HTML as '`<br />`'.  This is a nice alternative to
+markdown's "invisible" way of indicating hard line breaks using
+two trailing spaces on a line.
 
 Subscripts and superscripts
 ---------------------------
